# travel-recommendation-system

./: README.md  dockerfile  pyproject.toml  rdsf.json  requirements.txt
backend/: .env.example  app.py  main.py  pyproject.toml  requirements.txt  result.json
backend/controllers/: vrp.py
backend/models/: Accommodation_Detail.py  Activity_Detail.py  Connection.py  FoodAndDrink_Detail.py
backend/routes/: routes.py
backend/src/: main.py  temp.py
backend/src/adapters/: MapBox.py  MariaDB.py  Weaviate.py
backend/src/common/: docstring.py  duration_matrix.py  mariadb_schema.py  type.py  utils.py
backend/src/common/prompt/: etc_non_travel_answer.txt  etc_travel_answer.txt  intent_classification.txt  intent_classify.txt  ner.txt  place_type_classify.txt  summarize.txt  summarize_description.txt  summarize_place.txt  summarize_route.txt
backend/src/controllers/: chatbot.py  interface.py  streaming_chatbot.py  vrp.py  vrp_legacy.py
backend/src/controllers/ventical_n_day/: data_loader.py  duration_matrix.py  randomize.py  time_window.py  vrp.py
backend/src/di/: dependency_injection.py  unit_of_work.py
backend/src/entrypoints/http/vrp/: mapper.py  router.py  schema.py
backend/src/models/: exception.py  place.py  vrp.py
backend/src/repositories/abstraction/: __init__.py  place.py
backend/src/repositories/relational_db/: __init__.py
backend/src/repositories/relational_db/place/: mapper.py  orm.py  repository.py
backend/src/settings/: __init__.py
backend/src/settings/db/: __init__.py  base.py  mysql.py
backend/src/templates/: index.html
backend/src/usecases/: query_response.py  vrp.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts.timestamp-1732540106214-5eefc0fa2e4b3.mjs
frontend/src/: App.tsx  api.ts  index.css  main.tsx  theme.ts
frontend/src/components/: ChatWindow.tsx  InputBox.tsx
frontend/src/components/Chat/: ChatSection.component.tsx  ChatWindow.component.tsx  InputBox.component.tsx
frontend/src/components/PlaceInformations/: AccommodationCard.component.tsx  AccommodationInformation.component.tsx  ActivityCard.component.tsx  ActivityInformation.component.tsx
frontend/src/components/Planner/Chat/: ChatSection.component.tsx  ChatWindow.component.tsx
frontend/src/components/Planner/Planning/: DragAndDropContainer.component.tsx  DroppedAccommodationSuggestionCard.component.tsx  PlanningSection.component.tsx  TimeSlider.component.tsx
frontend/src/components/Planning/: DragAndDropContainer.component.tsx  DroppedAccommodationSuggestionCard.component.tsx  DroppedActivitySuggestionCard.component.tsx  PlanningSection.component.tsx  TimeSlider.component.tsx
frontend/src/components/Schedule/: AddPlaceDropZone.component.tsx  DisplaySchedule.component.tsx  EditPlaceModal.component.tsx  ScheduleTable.component.tsx
frontend/src/components/ShoppingCart/: ShoppingCart.component.tsx
frontend/src/components/Suggestions/: AccommodationCard.component.tsx  AccommodationInformation.component.tsx  AccommodationSuggestionCard.component.tsx  ActivityCard.component.tsx  ActivityInformation.component.tsx  DetailsDialog.component.tsx  InformationSection.component.tsx  SuggestionsSection.component.tsx
frontend/src/components/chatComponents/: InputBox.tsx
frontend/src/components/mainComponents/: Chat.tsx  Suggestion.tsx
frontend/src/components/routingRecommenderComponents/: MultipleSelectChip.tsx
frontend/src/components/utils/: DualRangeSelectBar.tsx  MultiRangeSelectBar.tsx  TimePicker.tsx
frontend/src/utils/: api.ts  export_route.ts  time.ts
frontend/src/utils/DataType/: message.ts  place.ts  route.ts  shoppingCart.ts
frontend/src/views/: Chat.tsx  Chatbot.tsx  Planner.view.tsx  Preference.view.tsx  RoutingReccomender.tsx  Suggestion.tsx
(+9 files in other folders)
